Actions
Bug #9175
closedsmbsrv/libfksmbsrv: this statement may fall through
Start date:
2018-02-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
../../common/fs/smbsrv/smb_server.c:1371:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (!smb_server_lookup(&sv)) { ^ ../../common/fs/smbsrv/smb_server.c:1383:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2d63d7e2e0f22bde6326636e6558471d35de3daa
commit 2d63d7e2e0f22bde6326636e6558471d35de3daa Author: Toomas Soome <tsoome@me.com> Date: 2018-03-11T06:44:46.000Z 9175 smbsrv/libfksmbsrv: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>
Actions