9175 smbsrv/libfksmbsrv: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>