usr/src/uts/common/fs/smbsrv/smb_server.c
@@ -1392,7 +1392,7 @@ smb_server_legacy_kstat_update(kstat_t *ksp, int rw)
 			rc = 0;
 			break;
 		}
-		_NOTE(FALLTHRU)
+		/* FALLTHROUGH */
 	default:
 		rc = EIO;
 		break;
